crates/test-files/fixtures/compile_errors/call_to_pure_struct_fn_on_instance.fe
struct Bar {
    pub fn foo(_ val: u256){
    }
}

contract Foo {

    fn call_bar(self) {
        Bar().foo(1)
    }
}
